--- a/Retail Fuel Managent System.csproj
+++ b/Retail Fuel Managent System.csproj
@@ -119,6 +119,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecieveStock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RecieveStock.Designer.cs">
+      <DependentUpon>RecieveStock.cs</DependentUpon>
+    </Compile>
     <Compile Include="Retail.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,12 @@
     </Compile>
     <Compile Include="Splash.Designer.cs">
       <DependentUpon>Splash.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StockTake.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StockTake.Designer.cs">
+      <DependentUpon>StockTake.cs</DependentUpon>
     </Compile>
     <Compile Include="SystemSetup.cs">
       <SubType>Form</SubType>
@@ -176,8 +188,20 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RecieveStock.resx">
+      <DependentUpon>RecieveStock.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Retail.resx">
       <DependentUpon>Retail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Splash.resx">
+      <DependentUpon>Splash.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StockTake.resx">
+      <DependentUpon>StockTake.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SystemSetup.resx">
+      <DependentUpon>SystemSetup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserRegistration.resx">
       <DependentUpon>UserRegistration.cs</DependentUpon>
